--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,58 +1,35 @@
-<!DOCTYPE html>
-<html lang="pt_br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ecoleta</title>
+{% extends "layout.html" %}
+
+{% set pageId = "page-home" %}
   
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-  <link href="/styles/main.css" rel="stylesheet" />
+{% block styles %}
   <link href="/styles/home.css" rel="stylesheet" />
   <link href="/styles/modal.css" rel="stylesheet" />
-  <link href="/styles/responsive.css" rel="stylesheet" />
-</head>
-<body>
+{% endblock styles %}
 
-  <div id="page-home">
+{% block content %}
+  <div class="content">
 
-    <div class="content">
-  
-      <header>
-        <img src="/assets/logo.svg" alt="Logomarca" />
-        <a href="/create-point.html">
-          <span></span>
-          Cadastre um ponto de coleta</a>
-      </header>
+    <header>
+      <img src="/assets/logo.svg" alt="Logomarca" />
+      <a href="/create-point">
+        <span></span>
+        Cadastre um ponto de coleta</a>
+    </header>
 
-      <main>
-        <h1>Seu marketplace de coleta de resíduos</h1>
-        <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente.</p>
-        <a href="#"><span></span><strong>Pesquisar pontos de coleta</strong></a>
-      </main>
-
-    </div>
+    <main>
+      <h1>Seu marketplace de coleta de resíduos</h1>
+      <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente.</p>
+      <a href="#"><span></span><strong>Pesquisar pontos de coleta</strong></a>
+    </main>
 
   </div>
+{% endblock content %}
 
-  <div id="modal" class="hide">
-    <div class="content">
-      <div class="header">
-        <h1>Pontos de Coleta</h1>
-        <a href="#">Fechar</a>
-      </div>
-      <form action="/search-results.html">
-        <label for="search">Cidade</label>
-        <div class="search field">
-          <input type="text" name="search" placeholder="Pesquise por cidade"/>
-          <button>
-            <img src="/assets/search.svg" alt="Buscar" />
-          </button>
-        </div>
-      </form>
-    </div>
-  </div>
+{% block modal %}
+  {% include "partials/modal.html" %}
+{% endblock modal %}
 
+{% block scripts %}
   <script src="/scripts/index.js"></script>
-
-</body>
-</html>
+{% endblock scripts %}
